--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
     "node": ">=8.0.0"
   },
   "version": "2.0.0",
-  "description": "Scraper for oEmbed, Twitter Cards and Open Graph metadata - fast and Promise-based",
-  "main": "index.js",
+  "description":
+    "Scraper for oEmbed, Twitter Cards and Open Graph metadata - fast and Promise-based",
+  "main": "dist/index.js",
   "standard": {
-    "ignore": [
-      "/test/*.js",
-      "/bench/*.js"
-    ]
+    "ignore": ["/test/*.js", "/bench/*.js"]
   },
   "dependencies": {
     "debug": "^3.1.0",
@@ -21,7 +19,9 @@
     "node-fetch": "^1.7.3"
   },
   "devDependencies": {
-    "pify": "^2.3.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.0.0",
     "coveralls": "^3.0.0",
@@ -33,13 +33,18 @@
     "mocha-lcov-reporter": "^1.2.0",
     "nyc": "^11.0.1",
     "open-graph-scraper": "^3.0.0",
+    "pify": "^2.3.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-node-resolve": "^3.0.3",
     "serve": "^6.4.9",
     "standard": "^10.0.2"
   },
   "scripts": {
     "bench": "DEBUG=bench node --harmony ./bench/index.js",
     "test": "mocha ./test/*.test.js",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha ./test/*.test.js --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls":
+      "istanbul cover ./node_modules/mocha/bin/_mocha ./test/*.test.js --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "build:umd": "rollup index.js -c rollup.config.js"
   },
   "keywords": [
     "oembed",
@@ -56,11 +61,7 @@
     "nodejs",
     "fast"
   ],
-  "files": [
-    "README.md",
-    "index.js",
-    "lib/"
-  ],
+  "files": ["README.md", "index.js", "dist/"],
   "repository": "git://github.com/jacktuck/unfurl.git",
   "author": "Jack Tuck",
   "license": "ISC"
