--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "readable-stream": "^2.3.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
